02May99=======================================================================
1. Added the mechanism for doing user spot filtering for spots in the cluster 
(no user control just yet - but sysops can do it).
2. Fixed problem with nodes sending out the node lists of isolated nodes.
30Apr99=======================================================================
1. Try to make it even more AK1A friendly by putting the node list out in the
'correct' order.
2. added code so that local users and commands go to all connected nodes 
INCLUDING the isolated ones.
26Apr99=======================================================================
1. added set/user command as a hack, please use this with care, there is
very little checking.
2. added export_opernam.pl which is a basic reader of AK1A opernam.dat files
to stdout
25Apr99=======================================================================
1. Fixed problem with filtered spots not coming out.
2. Added the possibility of filtering on channel callsign
20Apr99=======================================================================
1. altered order of undefing and closing of user file in an attempt to make 
corruptions/missing users less likely.
2. made messages that are addressed to the node call appear to the alias call
3. check dates much more rigourously.
4. ignore SIGTERM and SIGINT during shutdown of the cluster
15Mar99=======================================================================
1. added $actiondata to filter line to allow per action data such as no of hops
2. fixed a silly problem in talk for non-existant callsigns
3. Added sysop command
02Mar99========================================================================
1. Changed DXUser so that it uses a homemade import/export hash routine 
2. DXUser now uses a DB_BTREE file
3. Added export_users.pl, import_users.pl and convert_users.pl
25Feb99========================================================================
1. added NL language stuff.