@@ -17,12 +17,16 @@ return (1, $self->msg('e5')) if $self->priv < 9;
 
 foreach $call (@args) {
 	$call = uc $call;
-	if ($ref = DXUser->get_current($call)) {
-		$ref->lockout(0);
-		$ref->put();
-		push @out, $self->msg("lockoutun", $call);
+	unless ($self->remotecmd) {
+		if ($ref = DXUser->get_current($call)) {
+			$ref->lockout(0);
+			$ref->put();
+			push @out, $self->msg("lockoutun", $call);
+		} else {
+			push @out, $self->msg('e3', 'unset/lockout', $call);
+		}
 	} else {
-		push @out, $self->msg('e3', 'unset/lockout', $call);
+		push @out, $self->msg('sorry');
 	}
 }
 return (1, @out);
